# pymetasnap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  out.csv  pyproject.toml  sample_3.csv
.code_quality/: .coveragerc  .flake8  .pylintrc
.github/workflows/: auto-increase-package-version.yml  cd.yml  ci.yml  dependabot-auto-merge.yml  dependabot_auto-approve.yml  dependabot_auto-label.yml  dependabot_auto-merge.yml  dependabot_fetch-metadata.yml  python-publish.yml  release.yml
extractor/: checks.py  core.py  main.py  render.py  utils.py
mocks/in/: pip_freeze_fmt_sample.txt  pip_list_fmt_sample.txt
mocks/in/pip_freeze/: pip_freeze_fmt_sample.txt  pip_freeze_fmt_sample_2.txt
mocks/in/pip_list/: pip_list_fmt_sample.txt
notebooks/: sandbox.ipynb
tests/: test_app.py
tests/integration/: test_e2e.py
tests/mocks/in/pip_freeze/: sample_1.txt  sample_2.txt  sample_3.txt
tests/unit/: test_app.py  test_core.py
