[tool.poetry]
name = "pypi-meta-extractor"
version = "0.1.0"
description = "This package allows you to scrape metadata from the Python Package Index"
authors = ["cristian-rincon <cristian.o.rincon.b@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "extractor"}]

[tool.poetry.scripts]
pypi-extractor = "extractor.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.4.1"
shellingham = "^1.5.0.post1"
openpyxl = "^3.1.2"
pandas = "^2.0.2"
loguru = "^0.7.0"
tqdm = "^4.65.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0", allow-prereleases = true}
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
